focus shadow inset fixed on mobile

--- a/src/input.css
+++ b/src/input.css
@@ -11,12 +11,18 @@
         @apply transition-colors rounded-md hover:bg-slate-700/15 active:bg-slate-700/30;
     }
 
-    /** focuse inset shadow effect **/    
+    /** focus inset shadow effect **/    
     .inset-shadow-effect-dark {
-        box-shadow: 0px 0px 400px 200px rgba(0,0,0,0.75);
-        -webkit-box-shadow: 0px 0px 400px 200px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 0px 400px 200px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 400px 200px rgba(0,0,0,1);
+        -webkit-box-shadow: 0px 0px 400px 200px rgba(0,0,0,1);
+        -moz-box-shadow: 0px 0px 400px 200px rgba(0,0,0,1);
     }
+
+    /* .inset-shadow-effect-dark {
+        box-shadow: 0px 0px 400px 200px rgba(179, 32, 32, 0.75);
+        -webkit-box-shadow: 0px 0px 400px 200px rgba(160, 19, 19, 0.75);
+        -moz-box-shadow: 0px 0px 400px 200px rgba(204, 22, 22, 0.75);
+    } */
 
     /** blog **/
     ._hr-line {
