--- a/src/output.css
+++ b/src/output.css
@@ -1399,7 +1399,13 @@ video {
   background-color: rgb(51 65 85 / 0.3);
 }
 
-/** focuse inset shadow effect **/
+/** focus inset shadow effect **/
+
+/* .inset-shadow-effect-dark {
+        box-shadow: 0px 0px 400px 200px rgba(179, 32, 32, 0.75);
+        -webkit-box-shadow: 0px 0px 400px 200px rgba(160, 19, 19, 0.75);
+        -moz-box-shadow: 0px 0px 400px 200px rgba(204, 22, 22, 0.75);
+    } */
 
 /** blog **/
 
@@ -1489,12 +1495,12 @@ video {
   position: relative;
 }
 
-.-bottom-52 {
-  bottom: -13rem;
+.-bottom-80 {
+  bottom: -20rem;
 }
 
-.-top-52 {
-  top: -13rem;
+.-top-80 {
+  top: -20rem;
 }
 
 .bottom-44 {
@@ -1519,6 +1525,78 @@ video {
 
 .top-52 {
   top: 13rem;
+}
+
+.-bottom-8 {
+  bottom: -2rem;
+}
+
+.-top-8 {
+  top: -2rem;
+}
+
+.-bottom-96 {
+  bottom: -24rem;
+}
+
+.-top-96 {
+  top: -24rem;
+}
+
+.-bottom-\[50px\] {
+  bottom: -50px;
+}
+
+.-top-\[50px\] {
+  top: -50px;
+}
+
+.-bottom-\[200px\] {
+  bottom: -200px;
+}
+
+.-top-\[200px\] {
+  top: -200px;
+}
+
+.-bottom-\[250px\] {
+  bottom: -250px;
+}
+
+.-top-\[250px\] {
+  top: -250px;
+}
+
+.-bottom-\[300px\] {
+  bottom: -300px;
+}
+
+.-top-\[300px\] {
+  top: -300px;
+}
+
+.-bottom-\[30px\] {
+  bottom: -30px;
+}
+
+.-top-\[30px\] {
+  top: -30px;
+}
+
+.-bottom-\[270px\] {
+  bottom: -270px;
+}
+
+.-top-\[270px\] {
+  top: -270px;
+}
+
+.-bottom-\[280px\] {
+  bottom: -280px;
+}
+
+.-top-\[280px\] {
+  top: -280px;
 }
 
 .z-10 {
@@ -2512,9 +2590,9 @@ video {
 /* test//////// */
 
 .\*\:inset-shadow-effect-dark > * {
-  box-shadow: 0px 0px 400px 200px rgba(0,0,0,0.75);
-  -webkit-box-shadow: 0px 0px 400px 200px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 400px 200px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 400px 200px rgba(0,0,0,1);
+  -webkit-box-shadow: 0px 0px 400px 200px rgba(0,0,0,1);
+  -moz-box-shadow: 0px 0px 400px 200px rgba(0,0,0,1);
 }
 
 @media (min-width: 768px) {
@@ -2835,21 +2913,6 @@ video {
   z-index: 10;
 }
 
-.\*\:mx-5 > * {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
-.\*\:mx-3 > * {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-}
-
-.\*\:mx-0 > * {
-  margin-left: 0px;
-  margin-right: 0px;
-}
-
 .\*\:mx-2 > * {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -2865,14 +2928,6 @@ video {
 
 .\*\:inline > * {
   display: inline;
-}
-
-.\*\:flex > * {
-  display: flex;
-}
-
-.\*\:inline-flex > * {
-  display: inline-flex;
 }
 
 .\*\:h-10 > * {
@@ -2933,6 +2988,14 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:-bottom-52 {
+    bottom: -13rem;
+  }
+
+  .md\:-top-52 {
+    top: -13rem;
+  }
+
   .md\:bottom-48 {
     bottom: 12rem;
   }
